feat: add role-based access control with ADMIN, AGENT_TERRAIN, and FARMER
- integrated roles in AppUser
- secured Farmer, Ferme, and Parcelle services
- added filtering by user ownership
- included role in login response